--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 50px;
+  padding: 50px 0px;
 }
 
 .canvas {
@@ -61,4 +62,5 @@ body {
 }
 
 .controls .controls__range {
+  margin-bottom: 30px;
 }
